# versioned-storage-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  settings.py
src/database/: client_async.py  database.py  db_models.py  dependencies.py  rollback_on_error_wrapper.py
src/endpoint_handlers/: base_endpoint_handler.py  complete_version_endpoint_handler.py  create_version_endpoint_handler.py  download_data_b64_endpoint_handler.py  download_data_endpoint_handler.py  get_collections_endpoint_handler.py  get_items_endpoint_handler.py  set_items_endpoint_handler.py  upload_data_b64_endpoint_handler.py  upload_data_endpoint_handler.py
src/error_handler/: base_exception.py  error_handler.py  mappers_registry.py  resolver.py
src/exceptions/: exceptions.py  mapper.py
src/models/schemas/: base.py  requests.py  responses.py  schemas.py
src/routes/: health.py  public_ro.py  public_rw.py
src/storage/: storage.py
tests/: test_integration.py
